# Aquaiq-AI

./: .env.example  .gitignore  README.md  application.py  exercise-1_Pavitra.archimate  pyproject.toml  writeup.md
db/6947cb07-31e8-4d8f-b671-21d15cdea42f/: index_metadata.pickle
docs/: writeup.md
docs/training/architecture-exercises/exercise-1/: Exercise-1_Pavitra.archimate  Exercise-1_Pavitra_.md  exercise-1_Deepak.archimate  exercise-1_Deepak.md  exercise-1_Prem_Kumar_Reddy.archimate  exercise-1_Prem_Kumar_Reddy.md  exercise-1_pavitra..md
docs/training/architecture-exercises/exercise-2/: exercise-2-notes.md  exercise-2.archimate
docs/training/architecture-exercises/exercise-3/: exercise-3-decision.md  exercise-3_Pavitra.archimate
docs/training/architecture-exercises/exercise-3/Variant-A/: exercise-3.archimate
docs/training/architecture-exercises/exercise-3/Variant-B/: exercise-3_Variant-B.archimate
src/aquaiq_ai/: agent.py  app.py  chat.py  embedding_helper.py  ingest.py  retriever.py  tools.py  ui.py
tests/: complete_tests.py
