[project]
name = "aquaiq-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Prem Kumar Reddy",email = "premkumarreddy.kothakapu@ecolab.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "openai (>=2.32.0,<3.0.0)",
    "chromadb (>=1.5.8,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "pypdf (>=6.10.2,<7.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "aquaiq_ai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
